@@ -475,6 +475,21 @@ int liblnk_file_get_utf8_local_path_size(
 
 		return( -1 );
 	}
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 2 ] != 0 ) )
+		{
+			utf8_local_path_size += 1;
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 1 ] != (uint8_t) '\\' )
+		{
+			utf8_local_path_size += 1;
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
 		result = libuna_utf8_string_size_from_utf16_stream(
@@ -522,7 +537,7 @@ int liblnk_file_get_utf8_local_path(
 {
 	liblnk_internal_file_t *internal_file = NULL;
 	static char *function                 = "liblnk_file_get_utf8_local_path";
-	size_t utf8_local_path_size           = 0;
+	size_t string_index                   = 0;
 	int result                            = 0;
 
 	if( file == NULL )
@@ -581,49 +596,10 @@ int liblnk_file_get_utf8_local_path(
 	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf8_string_size_from_utf16_stream(
-			  internal_file->location_information->local_path,
-			  internal_file->location_information->local_path_size,
-			  LIBUNA_ENDIAN_LITTLE,
-			  &utf8_local_path_size,
-			  error );
-	}
-	else
-	{
-		result = libuna_utf8_string_size_from_byte_stream(
-			  internal_file->location_information->local_path,
-			  internal_file->location_information->local_path_size,
-			  internal_file->io_handle->ascii_codepage,
-			  &utf8_local_path_size,
-			  error );
-	}
-	if( result != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve UTF-8 local path string size.",
-		 function );
-
-		return( -1 );
-	}
-	if( utf8_string_size < utf8_local_path_size )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
-		 "%s: UTF-8 string value too small.",
-		 function );
-
-		return( -1 );
-	}
-	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
-	{
-		result = libuna_utf8_string_copy_from_utf16_stream(
+		result = libuna_utf8_string_with_index_copy_from_utf16_stream(
 			  utf8_string,
 			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->local_path,
 			  internal_file->location_information->local_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -631,9 +607,10 @@ int liblnk_file_get_utf8_local_path(
 	}
 	else
 	{
-		result = libuna_utf8_string_copy_from_byte_stream(
+		result = libuna_utf8_string_with_index_copy_from_byte_stream(
 			  utf8_string,
 			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->local_path,
 			  internal_file->location_information->local_path_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -650,11 +627,51 @@ int liblnk_file_get_utf8_local_path(
 
 		return( -1 );
 	}
+	string_index--;
+
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 2 ] != 0 ) )
+		{
+			if( ( string_index + 1 ) > utf8_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-8 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf8_string[ string_index++ ] = (uint8_t) '\\';
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 1 ] != (uint8_t) '\\' )
+		{
+			if( ( string_index + 1 ) > utf8_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-8 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf8_string[ string_index++ ] = (uint8_t) '\\';
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf8_string_copy_from_utf16_stream(
-			  &( utf8_string[ utf8_local_path_size - 1 ] ),
-			  utf8_string_size - ( utf8_local_path_size - 1 ),
+		result = libuna_utf8_string_with_index_copy_from_utf16_stream(
+			  utf8_string,
+			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -662,9 +679,10 @@ int liblnk_file_get_utf8_local_path(
 	}
 	else
 	{
-		result = libuna_utf8_string_copy_from_byte_stream(
-			  &( utf8_string[ utf8_local_path_size - 1 ] ),
-			  utf8_string_size - ( utf8_local_path_size - 1 ),
+		result = libuna_utf8_string_with_index_copy_from_byte_stream(
+			  utf8_string,
+			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -772,6 +790,21 @@ int liblnk_file_get_utf16_local_path_size(
 
 		return( -1 );
 	}
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 2 ] != 0 ) )
+		{
+			utf16_local_path_size += 1;
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 1 ] != (uint8_t) '\\' )
+		{
+			utf16_local_path_size += 1;
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
 		result = libuna_utf16_string_size_from_utf16_stream(
@@ -819,7 +852,7 @@ int liblnk_file_get_utf16_local_path(
 {
 	liblnk_internal_file_t *internal_file = NULL;
 	static char *function                 = "liblnk_file_get_utf16_local_path";
-	size_t utf16_local_path_size          = 0;
+	size_t string_index                   = 0;
 	int result                            = 0;
 
 	if( file == NULL )
@@ -878,49 +911,10 @@ int liblnk_file_get_utf16_local_path(
 	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf16_string_size_from_utf16_stream(
-			  internal_file->location_information->local_path,
-			  internal_file->location_information->local_path_size,
-			  LIBUNA_ENDIAN_LITTLE,
-			  &utf16_local_path_size,
-			  error );
-	}
-	else
-	{
-		result = libuna_utf16_string_size_from_byte_stream(
-			  internal_file->location_information->local_path,
-			  internal_file->location_information->local_path_size,
-			  internal_file->io_handle->ascii_codepage,
-			  &utf16_local_path_size,
-			  error );
-	}
-	if( result != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve UTF-16 local path string size.",
-		 function );
-
-		return( -1 );
-	}
-	if( utf16_string_size < utf16_local_path_size )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
-		 "%s: UTF-16 string value too small.",
-		 function );
-
-		return( -1 );
-	}
-	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
-	{
-		result = libuna_utf16_string_copy_from_utf16_stream(
+		result = libuna_utf16_string_with_index_copy_from_utf16_stream(
 			  utf16_string,
 			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->local_path,
 			  internal_file->location_information->local_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -928,9 +922,10 @@ int liblnk_file_get_utf16_local_path(
 	}
 	else
 	{
-		result = libuna_utf16_string_copy_from_byte_stream(
+		result = libuna_utf16_string_with_index_copy_from_byte_stream(
 			  utf16_string,
 			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->local_path,
 			  internal_file->location_information->local_path_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -947,11 +942,51 @@ int liblnk_file_get_utf16_local_path(
 
 		return( -1 );
 	}
+	string_index--;
+
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_LOCAL_PATH_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 2 ] != 0 ) )
+		{
+			if( ( string_index + 1 ) > utf16_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-16 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf16_string[ string_index++ ] = (uint16_t) '\\';
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->local_path )[ internal_file->location_information->local_path_size - 1 ] != (uint16_t) '\\' )
+		{
+			if( ( string_index + 1 ) > utf16_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-16 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf16_string[ string_index++ ] = (uint16_t) '\\';
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf16_string_copy_from_utf16_stream(
-			  &( utf16_string[ utf16_local_path_size - 1 ] ),
-			  utf16_string_size - ( utf16_local_path_size - 1 ),
+		result = libuna_utf16_string_with_index_copy_from_utf16_stream(
+			  utf16_string,
+			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -959,9 +994,10 @@ int liblnk_file_get_utf16_local_path(
 	}
 	else
 	{
-		result = libuna_utf16_string_copy_from_byte_stream(
-			  &( utf16_string[ utf16_local_path_size - 1 ] ),
-			  utf16_string_size - ( utf16_local_path_size - 1 ),
+		result = libuna_utf16_string_with_index_copy_from_byte_stream(
+			  utf16_string,
+			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -1069,6 +1105,21 @@ int liblnk_file_get_utf8_network_path_size(
 
 		return( -1 );
 	}
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 2 ] != 0 ) )
+		{
+			utf8_network_share_name_size += 1;
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 1 ] != (uint8_t) '\\' )
+		{
+			utf8_network_share_name_size += 1;
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
 		result = libuna_utf8_string_size_from_utf16_stream(
@@ -1116,7 +1167,7 @@ int liblnk_file_get_utf8_network_path(
 {
 	liblnk_internal_file_t *internal_file = NULL;
 	static char *function                 = "liblnk_file_get_utf8_network_path";
-	size_t utf8_network_share_name_size   = 0;
+	size_t string_index                   = 0;
 	int result                            = 0;
 
 	if( file == NULL )
@@ -1175,49 +1226,10 @@ int liblnk_file_get_utf8_network_path(
 	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf8_string_size_from_utf16_stream(
-			  internal_file->location_information->network_share_name,
-			  internal_file->location_information->network_share_name_size,
-			  LIBUNA_ENDIAN_LITTLE,
-			  &utf8_network_share_name_size,
-			  error );
-	}
-	else
-	{
-		result = libuna_utf8_string_size_from_byte_stream(
-			  internal_file->location_information->network_share_name,
-			  internal_file->location_information->network_share_name_size,
-			  internal_file->io_handle->ascii_codepage,
-			  &utf8_network_share_name_size,
-			  error );
-	}
-	if( result != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve UTF-8 network share name string size.",
-		 function );
-
-		return( -1 );
-	}
-	if( utf8_string_size < utf8_network_share_name_size )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
-		 "%s: UTF-8 string value too small.",
-		 function );
-
-		return( -1 );
-	}
-	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
-	{
-		result = libuna_utf8_string_copy_from_utf16_stream(
+		result = libuna_utf8_string_with_index_copy_from_utf16_stream(
 			  utf8_string,
 			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->network_share_name,
 			  internal_file->location_information->network_share_name_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -1225,9 +1237,10 @@ int liblnk_file_get_utf8_network_path(
 	}
 	else
 	{
-		result = libuna_utf8_string_copy_from_byte_stream(
+		result = libuna_utf8_string_with_index_copy_from_byte_stream(
 			  utf8_string,
 			  utf8_string_size,
+			  &string_index,
 			  internal_file->location_information->network_share_name,
 			  internal_file->location_information->network_share_name_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -1244,11 +1257,51 @@ int liblnk_file_get_utf8_network_path(
 
 		return( -1 );
 	}
+	string_index--;
+
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 2 ] != 0 ) )
+		{
+			if( ( string_index + 1 ) > utf8_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-8 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf8_string[ string_index++ ] = (uint8_t) '\\';
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 1 ] != (uint8_t) '\\' )
+		{
+			if( ( string_index + 1 ) > utf8_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-8 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf8_string[ string_index++ ] = (uint8_t) '\\';
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf8_string_copy_from_utf16_stream(
-			  &( utf8_string[ utf8_network_share_name_size - 1 ] ),
-			  utf8_string_size - ( utf8_network_share_name_size - 1 ),
+		result = libuna_utf8_string_with_index_copy_from_utf16_stream(
+			  utf8_string,
+			  utf8_string_size,
+		          &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -1256,9 +1309,10 @@ int liblnk_file_get_utf8_network_path(
 	}
 	else
 	{
-		result = libuna_utf8_string_copy_from_byte_stream(
-			  &( utf8_string[ utf8_network_share_name_size - 1 ] ),
-			  utf8_string_size - ( utf8_network_share_name_size - 1 ),
+		result = libuna_utf8_string_with_index_copy_from_byte_stream(
+			  utf8_string,
+			  utf8_string_size,
+		          &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -1366,6 +1420,21 @@ int liblnk_file_get_utf16_network_path_size(
 
 		return( -1 );
 	}
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 2 ] != 0 ) )
+		{
+			utf16_network_share_name_size += 1;
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 1 ] != (uint8_t) '\\' )
+		{
+			utf16_network_share_name_size += 1;
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
 		result = libuna_utf16_string_size_from_utf16_stream(
@@ -1413,7 +1482,7 @@ int liblnk_file_get_utf16_network_path(
 {
 	liblnk_internal_file_t *internal_file = NULL;
 	static char *function                 = "liblnk_file_get_utf16_network_path";
-	size_t utf16_network_share_name_size  = 0;
+	size_t string_index                   = 0;
 	int result                            = 0;
 
 	if( file == NULL )
@@ -1472,49 +1541,10 @@ int liblnk_file_get_utf16_network_path(
 	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf16_string_size_from_utf16_stream(
-			  internal_file->location_information->network_share_name,
-			  internal_file->location_information->network_share_name_size,
-			  LIBUNA_ENDIAN_LITTLE,
-			  &utf16_network_share_name_size,
-			  error );
-	}
-	else
-	{
-		result = libuna_utf16_string_size_from_byte_stream(
-			  internal_file->location_information->network_share_name,
-			  internal_file->location_information->network_share_name_size,
-			  internal_file->io_handle->ascii_codepage,
-			  &utf16_network_share_name_size,
-			  error );
-	}
-	if( result != 1 )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
-		 LIBCERROR_RUNTIME_ERROR_GET_FAILED,
-		 "%s: unable to retrieve UTF-16 network share name string size.",
-		 function );
-
-		return( -1 );
-	}
-	if( utf16_string_size < utf16_network_share_name_size )
-	{
-		libcerror_error_set(
-		 error,
-		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
-		 "%s: UTF-16 string value too small.",
-		 function );
-
-		return( -1 );
-	}
-	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
-	{
-		result = libuna_utf16_string_copy_from_utf16_stream(
+		result = libuna_utf16_string_with_index_copy_from_utf16_stream(
 			  utf16_string,
 			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->network_share_name,
 			  internal_file->location_information->network_share_name_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -1522,9 +1552,10 @@ int liblnk_file_get_utf16_network_path(
 	}
 	else
 	{
-		result = libuna_utf16_string_copy_from_byte_stream(
+		result = libuna_utf16_string_with_index_copy_from_byte_stream(
 			  utf16_string,
 			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->network_share_name,
 			  internal_file->location_information->network_share_name_size,
 			  internal_file->io_handle->ascii_codepage,
@@ -1541,11 +1572,51 @@ int liblnk_file_get_utf16_network_path(
 
 		return( -1 );
 	}
+	string_index--;
+
+	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_NETWORK_SHARE_NAME_IS_UNICODE ) != 0 )
+	{
+		if( ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 3 ] != (uint8_t) '\\' )
+		 || ( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 2 ] != 0 ) )
+		{
+			if( ( string_index + 1 ) > utf16_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-16 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf16_string[ string_index++ ] = (uint16_t) '\\';
+		}
+	}
+	else
+	{
+		if( ( internal_file->location_information->network_share_name )[ internal_file->location_information->network_share_name_size - 1 ] != (uint8_t) '\\' )
+		{
+			if( ( string_index + 1 ) > utf16_string_size )
+			{
+				libcerror_error_set(
+				 error,
+				 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+				 LIBCERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
+				 "%s: UTF-16 string value too small.",
+				 function );
+
+				return( -1 );
+			}
+			utf16_string[ string_index++ ] = (uint16_t) '\\';
+		}
+	}
 	if( ( internal_file->location_information->string_flags & LIBLNK_LOCATION_INFORMATION_STRING_FLAG_COMMON_PATH_IS_UNICODE ) != 0 )
 	{
-		result = libuna_utf16_string_copy_from_utf16_stream(
-			  &( utf16_string[ utf16_network_share_name_size - 1 ] ),
-			  utf16_string_size - ( utf16_network_share_name_size - 1 ),
+		result = libuna_utf16_string_with_index_copy_from_utf16_stream(
+			  utf16_string,
+			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  LIBUNA_ENDIAN_LITTLE,
@@ -1553,9 +1624,10 @@ int liblnk_file_get_utf16_network_path(
 	}
 	else
 	{
-		result = libuna_utf16_string_copy_from_byte_stream(
-			  &( utf16_string[ utf16_network_share_name_size - 1 ] ),
-			  utf16_string_size - ( utf16_network_share_name_size - 1 ),
+		result = libuna_utf16_string_with_index_copy_from_byte_stream(
+			  utf16_string,
+			  utf16_string_size,
+			  &string_index,
 			  internal_file->location_information->common_path,
 			  internal_file->location_information->common_path_size,
 			  internal_file->io_handle->ascii_codepage,
